# 2DGame

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
Engine/: CMakeLists.txt
Engine/Engine/: Engine.hpp
Engine/Engine/Core/: App.cpp  App.hpp  Logger.hpp
Engine/Engine/Core/Camera/: Camera.hpp  CameraController.cpp  CameraController.hpp
Engine/Engine/Core/Event/: Event.hpp  Events.hpp
Engine/Engine/Core/Input/: Keyboard.hpp
Engine/Engine/Core/Render/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Engine/Engine/Core/Util/: IO.hpp  Math.hpp
Engine/Engine/Core/Window/: Window.cpp  Window.hpp
Engine/src/Engine/: App.cpp  App.hpp  Engine.hpp
Engine/src/Engine/Core/Application/: Application.cpp  Application.hpp  Boot.hpp  Layer.hpp
Engine/src/Engine/Core/Camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp
Engine/src/Engine/Core/Event/: Event.hpp  Events.hpp
Engine/src/Engine/Core/Render/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Engine/src/Engine/Core/Util/: IO.hpp  Math.hpp
Engine/src/Engine/Core/Window/: Window.cpp  Window.hpp
Game/: CMakeLists.txt  imgui.ini
Game/Assets/shaders/: basic.frag.glsl  basic.vert.glsl  game.frag.glsl  game.vert.glsl
Game/Game/: Game.cpp
